--- a/source.css
+++ b/source.css
@@ -5,7 +5,7 @@
   align-items: center;
   top: 1px;
   width: 100%;
-  height: 20px;
+  //height: 20px;
   margin: 0;
   padding-top: 12px;
   padding-right: 9px;
